--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,8 +20,7 @@
   <link href="/css/landing-page.min.css" rel="stylesheet">
   <% if (locals.data) {%>
     <meta name="og:title" content="IRC Assetto Corsa Server Invite">
-    <meta name="og:description" content="Server Name:<%-data.meta.track%>">
-    <meta name="og:description" content="Track:<%-data.meta.track%>">
+    <meta name="og:description" content="Server Name: <%-data.meta.name%> | Track: <%-data.meta.track%>">
     <meta property="og:image" content="https://indianracingcommunity.co.in/img/IRC_logo/logo_square_new.png">
     <% } %>
 
